# amaranth-unused-elaboratable

./: pyproject.toml
src/amaranth_template_fpga/: bar.py  foo.py
tests/: conftest.py  test_bar.py  test_foo.py
