[project]
name = "amaranth-template-fpga"
version = "0.0.0"
description = "Template for a generic FPGA project using Amaranth"

requires-python = "~=3.8"
dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]
markers = [
  "clks: tuple of clocks to register for simulator.",
  "module: top-level module to simulate.",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test = { cmd = "pytest" }
